--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.comicreader"
+        applicationId "com.example.myapplication"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
@@ -26,9 +26,29 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    //Retrofit 2
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //Rxjava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    //PhotoView
+    implementation 'com.github.chrisbanes:PhotoView:2.1.0'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //Banner Slider
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
+    //Spots Dialog
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    //EasyFlipViewPager
+    implementation 'com.wajahatkarim3.easyflipviewpager:easyflipviewpager:1.0.0'
 }
